# kv-service-with-libs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  generate_proto.sh
proto/: kvpb.proto  kvrpcpb.proto
src/: client.rs  lib.rs
src/kvproto/: kvpb.rs  kvpb_grpc.rs  kvrpcpb.rs  mod.rs
src/server/: mod.rs  peer.rs  peer_storage.rs  util.rs
